--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["clsx", "Jelegram", "NEXTAUTH", "prismadb"]
+  "cSpell.words": ["cloudinary", "clsx", "Jelegram", "NEXTAUTH", "prismadb"]
 }
